<resources>
    <string name="app_name">Force of a Punch</string>
    <string name="tap_to_select_user">Tap to Select User</string>
    <string name="add_new_user">Add New User</string>
    <string name="title_activity_add_new_user">AddNewUser</string>

    <!-- Strings used for Fragment navigation. Use these standard names for bundle values-->
    <string name="account_id_key">accountID</string>

    <!-- Strings used in SecondFragment -->
    <string name="num_results">Results: %d</string>

    <!-- Strings used in StudentProfileFragment -->
    <string name="no_punch_data">No punch data to show.</string>
    <string name="no_punch_record">No data</string>
    <string name="student_age">%s\nAge: %2d</string>
    <string name="mini_graph_label">Tap graph for more</string>
    <string name="punch_highscore">%sN</string>

    <!-- Strings used in StudentGraphFragment -->
    <string name="data_point_details">Attempt %d:\nDate: %s\nForce: %sN</string>
    <string name="punch_data_label">Punch History</string>
    <string name="graph_info_init_text">Tap a point for details.</string>
    <string name="delete_punch_title">Delete All Punch Data</string>
    <string name="delete_punch_message">Are you sure you want to delete all punch data? This operation cannot be undone.</string>
    <string name="delete_punch_confirm">Confirm</string>
    <string name="delete_punch_cancel">Cancel</string>

    <!-- Strings used in PunchResultFragment -->
    <string name="previous_record">Previous best:\n%sN</string>
    <string name="new_highscore">New high score!</string>

    <!-- Strings used for the image picker dialog-->
    <string name="dialog_name">Choose Image</string>
    <string name="dialog_message">Take a picture using the camera or choose an image from the gallery.</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="dialog_cancel">Cancel</string>
    
    <!-- Strings used for user profile create/edit -->
    <string name="submit_image_not_loaded">Profile image loading…</string>
    <string name="submit_missing_fields">Please fill out all fields</string>
    <string name="remove_photo"><u>Remove Photo</u></string>
    <string name="add_photo"><u>Add Photo</u></string>

    <!-- Strings used for the permission dialog -->
    <string name="permission_name">Permission Request</string>
    <string name="permission_message">To set a custom profile photo the app needs to access external storage.</string>
    <string name="permission_ok">OK</string>

    <!-- Strings used for formatting text -->
    <string name="number_format">####</string>
    <string name="date_format">dd MMM, yyyy \'at\' HH:mm</string>
    <string name="date_picker_text">%d/%d/%d</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="tap_to_begin">TAP TO BEGIN</string>
    <string name="start">Start!</string>
    <string name="force_of_punch">Force of a Punch</string>
    <string name="title_activity_result">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="force_of_punch_1500n">Force of Punch: 1500N</string>
    <string name="try_again">Try Again</string>
    <string name="save">Save</string>
    <string name="new_record_nprevious_record_800n">New Record!\nPrevious Record: 800N</string>
    <string name="todo">TODO</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_locked_confirmation">Hit the confirm button once the device is locked into place</string>
    <string name="confirm_secured">Confirm secured</string>
    <string name="logo">Logo</string>
    <string name="record">Record</string>
    <string name="measuring_punch_now">Measuring punch now!</string>
    <string name="measuring_punch_animation">measuring punch animation</string>
</resources>