<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkred"
    android:theme="@style/ThemeOverlay.ForceOfPunch.FullscreenContainer"
    tools:context=".Result" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/force_of_punch_1500n"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="46dp"
        tools:textSize="36sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_record_nprevious_record_800n"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="104dp"
        tools:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="173dp"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:text="@string/try_again"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="570dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:text="@string/save"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="570dp" />

</androidx.constraintlayout.widget.ConstraintLayout>